...
    SurferComponentPreview {
        Box(modifier = Modifier.padding(16.dp)) {
            SurferQuickActionsWidget(
                primaryLabel = "Add transaction",
                primaryIcon = SurferIcons.Add,
                onPrimaryClick = {},
                secondaryLabel = "Transfer",
                secondaryIcon = Icons.Filled.SwapHoriz,
                onSecondaryClick = {},
                modifier = Modifier
                    .fillMaxWidth()
                    .height(80.dp),
            )
...
@Preview
@Composable
private fun SurferQuickActionsCompactPreview() {
    SurferComponentPreview {
        Box(modifier = Modifier.padding(16.dp)) {
            SurferQuickActionsWidget(
                primaryLabel = "Add",
                primaryIcon = SurferIcons.Add,
                onPrimaryClick = {},
                secondaryLabel = "Transfer",
                secondaryIcon = Icons.Filled.SwapHoriz,
                onSecondaryClick = {},
                size = SurferWidgetSize.Compact,
...
